--- a/vue3/vue3项目+TypeScript前端项目一套通关/vue3_admin_template/vue3_admin_template/src/styles/index.scss
+++ b/vue3/vue3项目+TypeScript前端项目一套通关/vue3_admin_template/vue3_admin_template/src/styles/index.scss
@@ -3,15 +3,34 @@
 
 //滚动条外观设置
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-    background: $base-menu-background;
+  background: $base-menu-background;
 }
 
-::-webkit-scrollbar-thumb{
-    width: 10px;
-    background-color: yellowgreen;
-    border-radius: 10px;
+::-webkit-scrollbar-thumb {
+  width: 10px;
+  background-color: yellowgreen;
+  border-radius: 10px;
+}
+
+.noContentData {
+  height: 180 * $bs;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+  img {
+    width: 70 * $bs;
+    height: 70 * $bs;
+  }
+
+  .noDataText {
+    line-height: 50 * $bs;
+    padding-left: 10 * $bs;
+    font-size: 16 * $bs;
+  }
 }
